--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-syntax-highlighter": "^5.1.3",
     "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
+    "rss-to-json": "^1.0.3",
     "secure-random": "^1.1.1",
     "socket.io-client": "^1.4.6",
     "wif": "^2.0.6"
