--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Wallet for NEO blockchain",
   "author": "Copyright © Blockchain Services Limited",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-rebuild",
+    "electron-rebuild": "electron-rebuild",
     "start": "electron .",
     "assets": "webpack",
     "assets-watch": "webpack --watch",
@@ -38,10 +39,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
+      "target": ["AppImage", "deb"]
     },
     "win": {
       "target": "nsis",
@@ -61,6 +59,7 @@
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
     "electron-json-storage": "^3.0.7",
+    "electron-rebuild": "^1.6.0",
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
     "enzyme-adapter-react-15": "^1.0.1",
@@ -69,9 +68,13 @@
     "isomorphic-fetch": "^2.2.1",
     "jayson": "^2.0.1",
     "js-scrypt": "^0.2.0",
+    "ledgerco": "^1.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
-    "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "neon-js":
+      "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "node-hid": "0.5.7",
+    "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.6.0",
     "qrcode": "^0.8.2",
@@ -96,6 +99,7 @@
     "redux": "^3.5.2",
     "rss-to-json": "^1.0.3",
     "secure-random": "^1.1.1",
+    "shebang-loader": "^0.0.1",
     "socket.io-client": "^1.4.6",
     "wif": "^2.0.6"
   },
@@ -141,18 +145,15 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js"
     },
-    "testPathIgnorePatterns": [
-      "__tests__/setupTests.js"
-    ],
+    "testPathIgnorePatterns": ["__tests__/setupTests.js"],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
   }
 }
