--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
     "electron-json-storage": "^3.2.0",
+    "electron-json-storage-sync": "^1.1.0",
     "electron-rebuild": "^1.6.0",
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
