--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
-    "electron-json-storage": "^3.2.0",
-    "electron-json-storage-sync": "^1.1.0",
+    "electron-json-storage": "^3.0.7",
     "electron-rebuild": "^1.6.0",
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
@@ -100,6 +99,7 @@
     "react-syntax-highlighter": "^5.1.3",
     "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.2.0",
     "rss-to-json": "^1.0.3",
     "secure-random": "^1.1.1",
     "shebang-loader": "^0.0.1",
