allow ability to compose multiple store enhancers, apply multiple middlware,  added redux-logger, and enabled DevTools component

--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
