added es8 to eslint for async await support and removed es6 to get rid of buggy conflicts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "pack": "build --dir",
-    "dist": "build -mw"
+    "dist": "build -mw",
+    "lint-fix": "eslint app/** --fix"
   },
   "keywords": [],
   "build": {
