--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-countup": "^3.0.2",
     "react-data-grid": "^2.0.33",
     "react-dom": "^15.0.2",
+    "react-grid-layout": "^0.16.5",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-icons": "^2.2.5",
     "react-modal": "^3.1.2",
