--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "base-x": "^3.0.2",
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^3.3.2",
+    "blockcypher": "^0.2.0",
     "bootstrap": "^3.3.7",
     "bs58check": "^2.0.2",
     "buffer": "^5.0.6",
     "chart.js": "^2.7.1",
+    "coinkey": "^2.0.0",
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
@@ -85,7 +87,7 @@
     "prop-types": "^15.6.0",
     "qrcode": "^0.8.2",
     "qrcode.react": "^0.7.2",
-    "react": "^15.0.2",
+    "react": "^15.6.2",
     "react-ace": "^5.0.1",
     "react-bootstrap-modal": "^4.0.0",
     "react-chartjs-2": "^2.6.4",
@@ -111,6 +113,7 @@
     "secure-random": "^1.1.1",
     "shebang-loader": "^0.0.1",
     "socket.io-client": "^1.4.6",
+    "wallet-address-validator": "^0.1.1",
     "wif": "^2.0.6"
   },
   "devDependencies": {
@@ -129,7 +132,7 @@
     "electron-packager": "^8.6.0",
     "enzyme": "^3.1.0",
     "enzyme-to-json": "^3.1.1",
-    "eslint": "^2.9.0",
+    "eslint": "^2.13.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "^7.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
