--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "^0.17.0",
     "base-x": "^3.0.2",
     "bigi": "^1.4.2",
+    "bindings": "^1.3.0",
     "bitcoinjs-lib": "^3.3.2",
     "blockcypher": "^0.2.0",
     "bootstrap": "^3.3.7",
@@ -63,6 +64,7 @@
     "buffer": "^5.0.6",
     "chart.js": "^2.7.1",
     "coinkey": "^2.0.0",
+    "colors": "^1.1.2",
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
@@ -113,6 +115,7 @@
     "secure-random": "^1.1.1",
     "shebang-loader": "^0.0.1",
     "socket.io-client": "^1.4.6",
+    "validator": "^9.4.1",
     "wallet-address-validator": "^0.1.1",
     "wif": "^2.0.6"
   },
@@ -172,5 +175,8 @@
       "enzyme-to-json/serializer"
     ],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^3.0.3"
   }
 }
