--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
-    "electron-json-storage": "^3.0.7",
-    "electron-rebuild": "^1.6.0",
+    "electron-json-storage": "4.0.2",
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
     "enzyme-adapter-react-15": "^1.0.1",
@@ -133,6 +132,7 @@
     "electron": "1.6.16",
     "electron-builder": "^19.31.1",
     "electron-packager": "^8.6.0",
+    "electron-rebuild": "^1.6.0",
     "enzyme": "^3.1.0",
     "enzyme-to-json": "^3.1.1",
     "eslint": "^2.13.1",
