--- a/package.json
+++ b/package.json
@@ -121,10 +121,12 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "axios-mock-adapter": "^1.9.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.8.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -140,7 +142,7 @@
     "eslint-plugin-react": "^7.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
-    "html-webpack-plugin": "^2.16.1",
+    "html-webpack-plugin": "2.30.1",
     "jest": "^20.0.4",
     "json-loader": "^0.5.4",
     "node-sass": "^3.7.0",
@@ -157,7 +159,8 @@
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
+    "webpack": "3.8.1",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^1.14.1"
   },
   "jest": {
