--- a/package.json
+++ b/package.json
@@ -20,12 +20,7 @@
   "keywords": [],
   "build": {
     "appId": "com.electron.morpheus",
-    "files": [
-      "./main.js",
-      "dist/index.html",
-      "dist/bundle.js",
-      "dist/"
-    ],
+    "files": ["./main.js", "dist/index.html", "dist/bundle.js", "dist/"],
     "dmg": {
       "contents": [
         {
@@ -41,10 +36,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
+      "target": ["AppImage", "deb"]
     },
     "win": {
       "target": "nsis",
@@ -81,7 +73,8 @@
     "ledgerco": "^1.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
-    "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "neon-js":
+      "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
     "node-hid": "0.5.7",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
@@ -131,7 +124,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.6.16",
+    "electron": "1.6.17",
     "electron-builder": "^19.31.1",
     "electron-packager": "^8.6.0",
     "electron-rebuild": "^1.6.0",
@@ -165,18 +158,15 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js"
     },
-    "testPathIgnorePatterns": [
-      "__tests__/setupTests.js"
-    ],
+    "testPathIgnorePatterns": ["__tests__/setupTests.js"],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
   },
   "optionalDependencies": {
