--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "pack": "build --dir",
-    "dist": "build -mw",
+    "dist": "cross-env NODE_ENV=production build -mw",
     "lint-fix": "eslint app/** --fix"
   },
   "keywords": [],
@@ -75,7 +75,7 @@
     "moment": "^2.19.1",
     "neon-js":
       "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
-    "node-hid": "0.5.7",
+    "node-hid": "0.7.2",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.6.0",
@@ -123,6 +123,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.23.1",
     "electron": "1.6.17",
     "electron-builder": "^19.31.1",
