--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-ace": "^5.0.1",
     "react-bootstrap-modal": "^4.0.0",
     "react-chartjs-2": "^2.6.4",
+    "react-collapsible": "^2.0.4",
     "react-countup": "^3.0.3",
     "react-data-grid": "^2.0.33",
     "react-dom": "^15.0.2",
@@ -133,7 +134,7 @@
     "css-loader": "^0.23.1",
     "electron": "1.6.16",
     "electron-builder": "^19.31.1",
-    "electron-packager": "^8.6.0",
+    "electron-packager": "^8.7.2",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^3.1.0",
     "enzyme-to-json": "^3.1.1",
