--- a/package.json
+++ b/package.json
@@ -20,12 +20,7 @@
   "keywords": [],
   "build": {
     "appId": "com.electron.morpheus",
-    "files": [
-      "./main.js",
-      "dist/index.html",
-      "dist/bundle.js",
-      "dist/"
-    ],
+    "files": ["./main.js", "dist/index.html", "dist/bundle.js", "dist/"],
     "dmg": {
       "contents": [
         {
@@ -41,10 +36,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
+      "target": ["AppImage", "deb"]
     },
     "win": {
       "target": "nsis",
@@ -52,7 +44,7 @@
     }
   },
   "dependencies": {
-    "@cityofzion/neon-js": "^3.3.0",
+    "@cityofzion/neon-js": "^3.3.2",
     "axios": "^0.17.0",
     "base-x": "^3.0.2",
     "bigi": "^1.4.2",
@@ -83,7 +75,8 @@
     "ledgerco": "^1.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
-    "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "neon-js":
+      "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
     "node-hid": "0.5.7",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
@@ -164,18 +157,15 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js"
     },
-    "testPathIgnorePatterns": [
-      "__tests__/setupTests.js"
-    ],
+    "testPathIgnorePatterns": ["__tests__/setupTests.js"],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
   },
   "optionalDependencies": {
