--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Morpheus-Beta",
-  "version": "0.0.40",
+  "version": "0.0.5",
   "main": "./main.js",
-  "description": "Wallet for NEO blockchain",
-  "author": "Copyright © Blockchain Services Limited",
+  "description": "Wallet for NEO, BTC, LTC and ETH.",
+  "author": "Morpheus Software Solutions Limited",
   "scripts": {
     "postinstall": "electron-rebuild",
     "electron-rebuild": "electron-rebuild",
@@ -61,7 +61,7 @@
     "blockcypher": "^0.2.0",
     "bootstrap": "^3.3.7",
     "bs58check": "^2.0.2",
-    "buffer": "^5.0.6",
+    "buffer": "^5.1.0",
     "chart.js": "^2.7.1",
     "coinkey": "^2.0.0",
     "colors": "^1.1.2",
@@ -134,6 +134,7 @@
     "css-loader": "^0.23.1",
     "electron": "1.6.16",
     "electron-builder": "^19.31.1",
+    "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^8.7.2",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^3.1.0",
