LTC price fix and package update
fix for ltc price for sending and package update

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Morpheus-Beta",
   "version": "0.0.51",
+  "license": "GPL-3.0",
   "main": "./main.js",
   "description": "Wallet for NEO, BTC, LTC and ETH.",
   "author": "Morpheus Software Solutions Limited",
   "scripts": {
     "postinstall": "electron-rebuild",
-    "electron-rebuild": "electron-rebuild",
     "start": "electron --enable-logging .",
     "start-mock": "SHAPESHIFT_API=mock electron .",
     "assets": "webpack",
@@ -52,7 +52,7 @@
     }
   },
   "dependencies": {
-    "@cityofzion/neon-js": "^3.3.0",
+    "@cityofzion/neon-js": "^3.4.0",
     "axios": "^0.17.0",
     "base-x": "^3.0.2",
     "bigi": "^1.4.2",
@@ -62,9 +62,9 @@
     "bootstrap": "^3.3.7",
     "bs58check": "^2.0.2",
     "buffer": "^5.1.0",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.7.2",
     "coinkey": "^2.0.0",
-    "colors": "^1.1.2",
+    "colors": "^1.2.0",
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
@@ -72,6 +72,7 @@
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
     "enzyme-adapter-react-15": "^1.0.1",
+    "eslint-plugin-react": "^7.7.0",
     "ethereum-address": "0.0.4",
     "ethereumjs-util": "^5.1.5",
     "file-loader": "^0.9.0",
@@ -81,12 +82,13 @@
     "js-scrypt": "^0.2.0",
     "ledger-node-js-api": "0.0.0",
     "ledgerco": "^1.1.3",
-    "lodash": "^4.17.4",
-    "moment": "^2.19.1",
+    "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
     "node-hid": "0.5.7",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
+    "pngjs": "^3.3.2",
     "prop-types": "^15.6.0",
     "qrcode": "^0.8.2",
     "qrcode.react": "^0.7.2",
@@ -98,32 +100,32 @@
     "react-countup": "^3.0.3",
     "react-data-grid": "^2.0.33",
     "react-dom": "^15.0.2",
-    "react-grid-layout": "^0.16.5",
+    "react-grid-layout": "^0.16.6",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-icons": "^2.2.5",
-    "react-modal": "^3.1.2",
+    "react-modal": "^3.3.1",
     "react-redux": "^4.4.5",
     "react-responsive-accordion": "^1.0.0",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
-    "react-sanfona": "^1.0.6",
+    "react-sanfona": "^1.1.0",
     "react-spinkit": "^3.0.0",
-    "react-split-pane": "^0.1.65",
+    "react-split-pane": "^0.1.77",
     "react-syntax-highlighter": "^5.1.3",
     "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0",
-    "rss-to-json": "^1.0.3",
+    "rss-to-json": "^1.0.4",
     "secure-random": "^1.1.1",
     "shebang-loader": "^0.0.1",
     "socket.io-client": "^1.4.6",
     "validator": "^9.4.1",
-    "wallet-address-validator": "^0.1.1",
+    "wallet-address-validator": "^0.1.3",
     "wif": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "axios-mock-adapter": "^1.9.0",
+    "axios-mock-adapter": "^1.14.1",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -133,15 +135,14 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "electron": "1.6.16",
-    "electron-builder": "^19.31.1",
+    "electron-builder": "^19.56.2",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^8.7.2",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^3.1.0",
-    "enzyme-to-json": "^3.1.1",
+    "enzyme-to-json": "^3.3.1",
     "eslint": "^2.13.1",
     "eslint-loader": "^1.5.0",
-    "eslint-plugin-react": "^7.6.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.16.1",
@@ -155,7 +156,7 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.2.3",
+    "redux-mock-store": "^1.5.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
     "stats-webpack-plugin": "^0.3.1",
@@ -163,6 +164,10 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MorpheusWallet/beta.git"
   },
   "jest": {
     "moduleNameMapper": {
