--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Morpheus-Beta",
-  "version": "0.0.51",
+  "version": "0.0.52",
   "license": "GPL-3.0",
   "main": "./main.js",
   "description": "Wallet for NEO, BTC, LTC and ETH.",
   "author": "Morpheus Software Solutions Limited",
   "scripts": {
-    "postinstall": "electron-rebuild",
+    "postinstall": "electron-builder install-app-deps",
     "start": "electron --enable-logging .",
     "start-mock": "SHAPESHIFT_API=mock electron .",
     "assets": "webpack",
@@ -14,7 +14,7 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "pack": "build --dir",
-    "dist": "build -mw",
+    "dist": "build -mw --ia32",
     "lint-fix": "eslint app/** --fix"
   },
   "keywords": [],
@@ -127,11 +127,10 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.6.16",
-    "electron-builder": "19.34.1",
+    "electron": "1.6.17",
+    "electron-builder": "^20.4.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^11.1.0",
-    "electron-rebuild": "^1.6.0",
     "enzyme": "^3.1.0",
     "enzyme-to-json": "^3.3.1",
     "eslint": "^2.13.1",
