--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
   },
   "plugins": ["react"],
   "rules": {
-    "indent": ["error", "2"],
+    "indent": [2, 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
