--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "Wallet for NEO, BTC, LTC and ETH.",
   "author": "Morpheus Software Solutions Limited",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall":
+      "cross-env ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder install-app-deps",
     "start": "electron --enable-logging .",
     "start-mock": "SHAPESHIFT_API=mock electron .",
     "assets": "webpack",
@@ -21,12 +22,7 @@
   "keywords": [],
   "build": {
     "appId": "com.electron.morpheus",
-    "files": [
-      "./main.js",
-      "dist/index.html",
-      "dist/bundle.js",
-      "dist/"
-    ],
+    "files": ["./main.js", "dist/index.html", "dist/bundle.js", "dist/"],
     "dmg": {
       "contents": [
         {
@@ -42,10 +38,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
+      "target": ["AppImage", "deb"]
     },
     "win": {
       "target": "nsis",
@@ -66,6 +59,7 @@
     "chart.js": "^2.7.2",
     "coinkey": "^2.0.0",
     "colors": "^1.2.0",
+    "cross-env": "^5.1.4",
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
@@ -85,7 +79,8 @@
     "ledgerco": "^1.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
-    "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "neon-js":
+      "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
     "node-hid": "0.7.2",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
@@ -148,7 +143,7 @@
     "html-webpack-plugin": "^2.16.1",
     "jest": "^20.0.4",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
+    "node-sass": "latest",
     "postcss-loader": "^0.9.1",
     "prettier": "1.11.1",
     "react-addons-test-utils": "^15.0.2",
@@ -172,18 +167,15 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js"
     },
-    "testPathIgnorePatterns": [
-      "__tests__/setupTests.js"
-    ],
+    "testPathIgnorePatterns": ["__tests__/setupTests.js"],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
   },
   "optionalDependencies": {
