--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "description": "Wallet for NEO, BTC, LTC and ETH.",
   "author": "Morpheus Software Solutions Limited",
   "scripts": {
-    "postinstall":
-      "cross-env ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder install-app-deps",
+    "postinstall": "cross-env ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder install-app-deps",
     "start": "electron --enable-logging .",
     "start-mock": "SHAPESHIFT_API=mock electron .",
     "assets": "webpack",
@@ -22,7 +21,12 @@
   "keywords": [],
   "build": {
     "appId": "com.electron.morpheus",
-    "files": ["./main.js", "dist/index.html", "dist/bundle.js", "dist/"],
+    "files": [
+      "./main.js",
+      "dist/index.html",
+      "dist/bundle.js",
+      "dist/"
+    ],
     "dmg": {
       "contents": [
         {
@@ -38,7 +42,10 @@
       ]
     },
     "linux": {
-      "target": ["AppImage", "deb"]
+      "target": [
+        "AppImage",
+        "deb"
+      ]
     },
     "win": {
       "target": "nsis",
@@ -79,8 +86,7 @@
     "ledgerco": "^1.1.3",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
-    "neon-js":
-      "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
+    "neon-js": "git+https://github.com/CityOfZion/neon-js.git#e1cc32b710cd71e0cf12b3172a0bade3af813c1b",
     "node-hid": "0.7.2",
     "node-loader": "^0.6.0",
     "numeral": "^2.0.6",
@@ -167,15 +173,18 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
     },
-    "testPathIgnorePatterns": ["__tests__/setupTests.js"],
+    "testPathIgnorePatterns": [
+      "__tests__/setupTests.js"
+    ],
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ],
-    "snapshotSerializers": ["enzyme-to-json/serializer"],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/__tests__/setupTests.js"
   },
   "optionalDependencies": {
