--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "Morpheus-Beta",
-  "version": "0.0.52",
+  "version": "0.0.53",
   "license": "GPL-3.0",
   "main": "./main.js",
   "description": "Wallet for NEO, BTC, LTC and ETH.",
-  "author": "Morpheus Software Solutions Limited",
+  "author": "Morpheus S.S. Ltd",
   "scripts": {
     "postinstall": "cross-env ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES=true electron-builder install-app-deps",
     "start": "electron --enable-logging .",
