--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
       ]
     },
     "linux": {
+      "icon": "build/icon.png",
       "target": [
-        "AppImage",
         "deb"
       ]
     },
