--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "crypto-js": "^3.1.9-1",
     "ecurve": "^1.0.5",
     "electron-context-menu": "^0.9.1",
+    "electron-input-menu": "^2.1.0",
     "electron-json-storage": "^4.0.2",
     "electron-save-file": "^1.0.2",
     "elliptic": "^6.4.0",
