send fractions of all NEP

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,1 @@
-{
-  "env": {
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
-  "parserOptions": {
-    "ecmaVersion": 8,
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "jsx": true
-    },
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "indent": [2, 2, { "SwitchCase": 1 }],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
-  }
-}
+{"extends": "strongloop"}
