--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.8.2",
+    "electron": "^1.8.3",
     "electron-builder": "^20.4.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^11.1.0",
