--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Morpheus-Beta",
-  "version": "0.0.54",
+  "version": "0.0.56",
   "license": "GPL-3.0",
   "main": "./main.js",
   "description": "Wallet for NEO, BTC, LTC and ETH.",
@@ -58,11 +58,14 @@
   },
   "dependencies": {
     "@cityofzion/neon-js": "^3.4.0",
+    "@types/bitcoinjs-lib": "^3.3.3",
+    "acorn": "^5.5.3",
     "axios": "^0.17.0",
     "base-x": "^3.0.2",
     "bigi": "^1.4.2",
     "bindings": "^1.3.0",
     "bitcoinjs-lib": "^3.3.2",
+    "bitcore-mnemonic": "^1.5.0",
     "blockcypher": "^0.2.0",
     "bootstrap": "^3.3.7",
     "bs58check": "^2.0.2",
@@ -116,6 +119,7 @@
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
     "react-sanfona": "^1.1.0",
+    "react-select": "^1.2.1",
     "react-spinkit": "^3.0.0",
     "react-split-pane": "^0.1.77",
     "react-syntax-highlighter": "^5.1.3",
@@ -141,7 +145,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.8.4",
+    "electron": "1.6.17",
     "electron-builder": "^20.4.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^11.1.0",
