--- a/package.json
+++ b/package.json
@@ -119,7 +119,6 @@
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
     "react-sanfona": "^1.1.0",
-    "react-select": "^1.2.1",
     "react-spinkit": "^3.0.0",
     "react-split-pane": "^0.1.77",
     "react-syntax-highlighter": "^5.1.3",
@@ -145,7 +144,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.6.17",
+    "electron": "^1.8.4",
     "electron-builder": "^20.4.1",
     "electron-installer-dmg": "^0.2.1",
     "electron-packager": "^11.1.0",
