--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron": "1.6.16",
+    "electron": "^1.8.4",
     "electron-builder": "^19.31.1",
     "electron-packager": "^8.6.0",
     "electron-rebuild": "^1.6.0",
